--- a/essal/www/login.html
+++ b/essal/www/login.html
@@ -68,7 +68,7 @@
 	</form>
 
 	<form class="form-signin form-signup hide" role="form">
-		<h2 class="section-title"><strong>جرب هُدهُد لمدة 30 يوماً مجاناً</strong></h2>
+		<h2 class="section-title"><strong>جرب نماء لمدة 30 يوماً مجاناً</strong></h2>
 		<input type="text" id="signup_fullname"
 			class="form-control" placeholder="{{ _('الأسم بالكامل') }}" required autofocus>
 		<input type="email" id="signup_email"
